# CMakeTest

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  pre_process.cpp  pre_process.h  process.cpp  process.h
include/: my_process.h
src/: CMakeLists.txt  main.cpp  process.cpp
src/my_process/: CMakeLists.txt  my_process.cpp  my_process.h
src/pre_process/: CMakeLists.txt  pre_process.cpp
